# strict

./: .env.example  .gitignore  README.md  create_p0_issues.sh  create_p1_issues.sh  create_p2_issues.sh  create_p3_issues.sh  fix_all_issues.sh  package-lock.json  package.json  pyproject.toml
docs/: architecture.md  mathematical_proofs.md  setup_guide.md
sdks/go/: client.go
sdks/rust/: lib.rs
sdks/typescript/: index.ts
src/strict/: cli.py  config.py  errors.py  plugins.py
src/strict/api/: graphql.py  routes.py  schemas.py  security.py  server.py  ws.py
src/strict/cache/: __init__.py  decorators.py
src/strict/core/: __init__.py  async_engine.py  geo_engine.py  interfaces.py  math_engine.py  math_ops.py  signal_engine.py
src/strict/dashboard/: routes.py
src/strict/dashboard/templates/: index.html
src/strict/integrity/: __init__.py  io.py  schemas.py  validators.py
src/strict/observability/: logging.py  metrics.py
src/strict/processors/: base.py  groq_processor.py  manager.py  ollama_processor.py  openai_processor.py
src/strict/storage/: cache.py  database.py  object_store.py
src/vaak/: __init__.py  config.py
src/vaak/core/: __init__.py  math_engine.py
src/vaak/integrity/: __init__.py  schemas.py  validators.py
tests/: __init__.py  test_api.py  test_async_engine.py  test_cache_decorators.py  test_cli.py  test_dashboard.py  test_errors.py  test_geo_routing.py  test_graphql.py  test_integrity.py  test_integrity_io.py  test_math.py  test_ml_validation.py  test_plugins.py  test_signal.py  test_storage.py  test_ws.py
